--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "An open source JJBA game.",
 	"main": "index.js",
 	"scripts": {
-		"build": "rbxtsc",
-		"watch": "rbxtsc -w",
+		"build": "npx roblox-ts build",
+		"watch": "npx roblox-ts -w",
 		"eslint": "eslint src --max-warnings 0"
 	},
 	"keywords": [],
