--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@rbxts/plasma": "^0.4.1-ts.0",
 		"@rbxts/profileservice": "^1.4.1",
 		"@rbxts/rewire": "^0.3.0",
+		"@rbxts/roact": "^1.4.2-ts.3",
 		"@rbxts/services": "^1.5.1",
 		"@rbxts/t": "^3.0.0"
 	}
