Add springs to pickup UI

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"typescript": "^4.8.2"
 	},
 	"dependencies": {
+		"@rbxts/flipper": "^2.0.1",
 		"@rbxts/matter": "^0.6.2-ts.0",
 		"@rbxts/net": "^3.0.3",
 		"@rbxts/plasma": "^0.4.1-ts.0",
