Use roact hooks & rodux rather than a matter hook

--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
 		"@rbxts/roact": "^1.4.2-ts.3",
 		"@rbxts/roact-hooked": "^2.1.2",
 		"@rbxts/roact-hooked-plus": "^1.2.0",
+		"@rbxts/roact-rodux": "^0.2.2-ts.7",
+		"@rbxts/roact-rodux-hooked": "^1.1.2",
+		"@rbxts/rodux": "^3.0.0-ts.3",
 		"@rbxts/services": "^1.5.1",
 		"@rbxts/t": "^3.0.0"
 	}
