--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -29,10 +29,19 @@ jobs:
             - name: Compile
               run: npm run build
 
+    reuse-compliant:
+        name: Check Reuse Compliancy
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v3
+            - name: REUSE Compliance Check
+              uses: fsfe/reuse-action@v1
+
     deploy:
         name: deploy
         runs-on: ubuntu-latest
-        needs: [lint, build]
+        needs: [lint, build, reuse-compliant]
         if: github.ref == 'refs/heads/master'
         steps:
           - name: Checkout repository
