--- a/package.json
+++ b/package.json
@@ -15,31 +15,34 @@
 	},
 	"license": "GPL-3.0",
 	"devDependencies": {
-		"@rbxts/compiler-types": "^2.0.2-types.0",
+		"@rbxts/compiler-types": "^2.0.4-types.1",
 		"@rbxts/types": "^1.0.640",
 		"@typescript-eslint/eslint-plugin": "^5.36.1",
 		"@typescript-eslint/parser": "^5.36.1",
 		"eslint": "^8.23.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-roblox-ts": "^0.0.34",
+		"eslint-plugin-roblox-ts": "^0.0.35",
 		"typescript": "^4.8.2"
 	},
 	"dependencies": {
 		"@rbxts/flipper": "^2.0.1",
-		"@rbxts/matter": "^0.6.2-ts.0",
+		"@rbxts/gamejoy": "^1.1.4",
+		"@rbxts/log": "^0.6.3",
+		"@rbxts/matter": "^0.6.2-ts.5",
 		"@rbxts/net": "^3.0.3",
 		"@rbxts/plasma": "^0.4.1-ts.0",
 		"@rbxts/profileservice": "^1.4.1",
+		"@rbxts/r15-ragdoll": "^1.0.0",
 		"@rbxts/rewire": "^0.3.0",
-		"@rbxts/roact": "^1.4.2-ts.3",
+		"@rbxts/roact": "^1.4.4-ts.0",
 		"@rbxts/roact-hooked": "^2.1.2",
 		"@rbxts/roact-hooked-plus": "^1.2.0",
-		"@rbxts/roact-rodux": "^0.2.2-ts.7",
 		"@rbxts/roact-rodux-hooked": "^1.1.2",
 		"@rbxts/rodux": "^3.0.0-ts.3",
 		"@rbxts/services": "^1.5.1",
 		"@rbxts/t": "^3.0.0",
+		"@rbxts/zircon": "^1.0.9",
 		"rbxts-transform-debug": "github:roblox-aurora/rbxts-transform-debug#v2.0.0",
 		"roblox-ts": "^2.0.2"
 	}
