Hitbox and Framedata stuff

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@rbxts/roact-hooked-plus": "^1.2.0",
 		"@rbxts/roact-rodux-hooked": "^1.1.2",
 		"@rbxts/rodux": "^3.0.0-ts.3",
+		"@rbxts/rust-classes": "^0.12.0",
 		"@rbxts/services": "^1.5.1",
 		"@rbxts/t": "^3.0.0",
 		"@rbxts/zircon": "^1.0.9",
