--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"typescript": "^4.8.2"
 	},
 	"dependencies": {
+		"@rbxts/bitbuffer": "^1.1.1-ts.1",
 		"@rbxts/flipper": "^2.0.1",
 		"@rbxts/gamejoy": "^1.1.4",
 		"@rbxts/log": "^0.6.3",
