--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "npx roblox-ts build",
-		"watch": "npx roblox-ts -w",
+		"license": "reuse lint",
 		"eslint": "eslint src --max-warnings 0",
-		"clean": "rm -rf out && rm -rf include && rm -rf node_modules && npm i && npm run build"
+		"clean": "rm -rf out && rm -rf include && rm -rf node_modules && npm i && npm run build",
+		"watch": "npx roblox-ts -w",
+		"prepare": "husky install"
 	},
 	"keywords": [],
 	"author": {
@@ -24,6 +26,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-roblox-ts": "^0.0.35",
+		"husky": "^8.0.0",
 		"typescript": "^4.8.2"
 	},
 	"dependencies": {
