--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@rbxts/rust-classes": "^0.12.0",
 		"@rbxts/services": "^1.5.1",
 		"@rbxts/t": "^3.0.0",
+		"@rbxts/variant": "github:Mistrustfully/rbx-variant",
 		"@rbxts/zircon": "^1.0.9",
 		"rbxts-transform-debug": "github:roblox-aurora/rbxts-transform-debug#v2.0.0",
 		"roblox-ts": "^2.0.2"
