--- a/package.json
+++ b/package.json
@@ -18,39 +18,39 @@
 	},
 	"license": "GPL-3.0",
 	"devDependencies": {
-		"@rbxts/compiler-types": "^2.0.4-types.1",
-		"@rbxts/types": "^1.0.640",
-		"@typescript-eslint/eslint-plugin": "^5.36.1",
-		"@typescript-eslint/parser": "^5.36.1",
-		"eslint": "^8.23.0",
-		"eslint-config-prettier": "^8.5.0",
+		"@rbxts/compiler-types": "^2.1.0-types.1",
+		"@rbxts/types": "^1.0.661",
+		"@typescript-eslint/eslint-plugin": "^5.50.0",
+		"@typescript-eslint/parser": "^5.50.0",
+		"eslint": "^8.33.0",
+		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-roblox-ts": "^0.0.35",
-		"husky": "^8.0.0",
-		"typescript": "^4.8.2"
+		"husky": "^8.0.3",
+		"typescript": "^4.9.5"
 	},
 	"dependencies": {
 		"@rbxts/bitbuffer": "^1.1.1-ts.1",
 		"@rbxts/flipper": "^2.0.1",
 		"@rbxts/gamejoy": "^1.1.4",
 		"@rbxts/log": "^0.6.3",
-		"@rbxts/matter": "^0.6.2-ts.5",
+		"@rbxts/matter": "^0.6.2-ts.6",
 		"@rbxts/net": "^3.0.3",
-		"@rbxts/plasma": "^0.4.1-ts.0",
+		"@rbxts/plasma": "^0.4.1-ts.1",
 		"@rbxts/profileservice": "^1.4.1",
 		"@rbxts/r15-ragdoll": "^1.0.0",
 		"@rbxts/rewire": "^0.3.0",
 		"@rbxts/roact": "^1.4.4-ts.0",
-		"@rbxts/roact-hooked": "^2.1.2",
-		"@rbxts/roact-hooked-plus": "^1.2.0",
-		"@rbxts/roact-rodux-hooked": "^1.1.2",
+		"@rbxts/roact-hooked": "^2.3.3",
+		"@rbxts/roact-hooked-plus": "^1.6.7",
+		"@rbxts/roact-rodux-hooked": "^1.1.3",
 		"@rbxts/rodux": "^3.0.0-ts.3",
 		"@rbxts/rust-classes": "^0.12.0",
 		"@rbxts/services": "^1.5.1",
-		"@rbxts/t": "^3.0.0",
-		"@rbxts/variant": "github:Mistrustfully/rbx-variant",
+		"@rbxts/t": "^3.1.0",
+		"@rbxts/variant": "^1.0.2",
 		"@rbxts/zircon": "^1.0.9",
-		"rbxts-transform-debug": "github:roblox-aurora/rbxts-transform-debug#v2.0.0",
-		"roblox-ts": "^2.0.2"
+		"rbxts-transform-debug": "github:roblox-aurora/rbxts-transform-debug#v2.1.0",
+		"roblox-ts": "^2.1.0"
 	}
 }
